--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ body{
     background-color: #000;
     padding: 16px;
     box-sizing: border-box;
+    z-index: 5;
 }
 #mob-l-logo{
     display: none;
@@ -56,7 +57,6 @@ body{
     cursor: pointer;
 }
 .logo-container svg{
-    /* color: #000; */
     stroke: transparent;
     fill: #fff;
     margin-top: -4px;
@@ -96,8 +96,6 @@ body{
     padding: 4px 16px;
     overflow-wrap: anywhere;
     text-wrap-mode: wrap;
-    /* flex-wrap: wrap; */
-    /* text-wrap: wrap; */
 }
 .menu-button button{
     border: none;
@@ -111,6 +109,8 @@ body{
     width: 24px;
     margin-top: 4px;
 }
+/* _____Conten_____ */
+
 .main-wrap-content{
     display: block;
     margin-top: 56px;
@@ -123,7 +123,6 @@ body{
     display: block;
     font-family: 'SpotifyMixUI3Title';
     padding-top: 24px;
-    /* margin-bottom: 18px; */
 }
 .content-block-head h2{
     font-size: 1.25rem;
@@ -138,6 +137,7 @@ body{
     scroll-snap-type: x mandatory;
     scrollbar-width: none;
     box-sizing: border-box;
+    /* z-index: 4; */
 }
 .suggession-box{
     gap: 8px;
@@ -146,7 +146,7 @@ body{
     flex-flow: column;
     max-inline-size: 168px;
     scroll-snap-align: center;
-    z-index: 0;
+    /* z-index: 0; */
 }
 #suggession-box1{
     padding-left: 0px;
@@ -170,17 +170,144 @@ body{
     color: inherit;
     font-size: 16px;
     font-weight: 400;
-    font-weight: 800;
     line-height: normal;
     font-family: 'SpotifyMixUIRegular';
 }
 .box-head a span{
     width: 152px;
     display: -webkit-box;
-    /* line-clamp: 2; */
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+}
+/* _____footer_____ */
+
+.footer-content-container{
+    display: block;
+    /* color: #121212; */
+    position: relative;
+    padding: 8px 16px 40px;
+}
+.footer-content{
+    display: block;
+    padding-top: 32px;
+}
+.footer-site-links{
+    width: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: left;
+}
+.footer-links{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 32px;
+}
+#links-first{
+    padding: 8px 0px;
+}
+.links{
+    width: 100%;
+    height: fit-content;
+    display: block;
+    padding-bottom: 8px;
+    box-sizing: border-box;
+}
+.links a{
+    color: #B3B3B3;
+    font-weight: 400;
+    line-height: normal;
+    font-family: 'SpotifyMixUIRegular';
+}
+.footer-social-links .footer-links{
+    display: flex;
+    flex-flow: row;
+    margin-bottom: 40px;
+}
+.social-links{
+    display: block;
+    padding-right: 16px;
+}
+.social-links a{
+    height: 40px;
+    width: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: rgb(41, 41, 41);
+}
+.social-links a svg{
+    width: 16px;
+    height: 16px;
+    fill: #fff;
+}
+.divider{
+    display: block;
+    border-block-start: 1px solid #292929;
+    margin: 0 0 20px 0;
+}
+/* ____footer-End____ */
+
+.footer-bottom-container{
+    display: block;
+    padding-top: 16px;
+    box-sizing: border-box;
+}
+.footer-bottom-links{
+    display: flex;
+    flex-wrap: wrap;
+}
+.bottom-links{
+    display: inline-block;
+    margin-right: 16px;
+}
+.bottom-links a{
+    color: #B3B3B3;
+    display: block;
+    position: relative;
+    margin-bottom: 8px;
+}
+.bottom-links a span{
+    font-family: 'SpotifyMixUIRegular';
+    font-size: 0.875rem;
+    font-weight: 400;
+}
+.spotify25-container p{
+    display: block;
+    font-family: 'SpotifyMixUIRegular';
+    font-size: 0.875rem;
+    font-weight: 400;
+    color: #B3B3B3;
+}
+.language-selection-container{
+    display: block;
+    padding-top: 16px;
+}
+.language-cont{
+    display: inline-flex;
+    min-block-size: 32px;
+    background-color: #121212;
+    border-radius: 9999px;
+    border: 1px solid #7c7c7c;
+    font-family: 'SpotifyMixUIRegular';
+    font-size: 0.8125rem;
+    font-weight: 700;
+    padding: 6px 14px 4px 16px;
+    color: #fff;
+    gap: 4px;
+}
+.language-cont .text{
+    width: 45px;
+    display: inline-flex;
+    justify-content: left;
+}
+.language-cont span svg{
+    width: 16px;
+    height: 16px;
+    display: block;
+    fill: #fff;
+    margin: 1px 0px 0px -4px;
 }
 
 
@@ -197,4 +324,68 @@ body{
         line-height: 24px;
         text-wrap-mode: nowrap;
     }
+}
+
+@media screen and (min-width:768px) {
+   .footer-site-links{
+    flex-direction: row;
+   } 
+   .footer-site-links .footer-links{
+    width: 40%;
+    margin-right: 24px;
+   }
+}
+@media screen and (min-width:1024px) {
+    .nav-container{
+        gap: 0;
+        height: 64px;
+        padding: 8px;
+    }
+    #mob-l-logo{
+        height: 72px;
+        width: 72px !important;
+        text-align: center;
+        margin-top: -16px;
+    }
+    .logo-container{
+        margin: 28px 20px 20px;
+    }
+    .nav-right-container{
+        display: none;
+    }
+    .home-input-container{
+        width: 100%;
+        min-width: auto;
+        display: flex;
+    }
+    .home-button{
+        width: 48px;
+        height: 48px;
+        display: flex;
+        border: none;
+        border-radius: 50%;
+        background-color: #1f1f1f;
+        justify-content: center;
+        align-items: center;
+        margin-left: 8px;
+    }
+    .home-button span svg{
+        width: 24px;
+        height: 24px;
+        fill: #fff;
+        display: block;
+    }
+    #search span svg{
+        fill: rgb(179, 179, 179);
+    }
+    .nav-lap-container{
+        width: 100%;
+        display: flex;
+    }
+    .laptop-right-container{
+        width: 100%;
+        display: flex;
+        
+    }
+
 }
